sass/main.scss
// *=======================================================================================
// ** Styles for all pages  **
// ** Reset based on https://hankchizljaw.com/wrote/a-modern-css-reset/  **
// *=======================================================================================

//********** Imports **********

@use 'bits' as *; //Contains variables, media queries mixins etc.

// *=========================================
// ** Wrappers **
// *=========================================

html {
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  -webkit-tap-highlight-color: transparent;
  font-size: 10px;

  @include styled-scrollbar(
    1rem,
    $background-colour-three,
    $background-colour-main,
    $background-colour-main
  );
}

// * Box sizing rules
*,
*:before,
*:after {
  box-sizing: border-box;
}

body {
  margin: 0 auto;
  background-color: $background-colour-main;
  position: relative;
  min-width: 320px;
  max-width: 2000px;
  @include main-font-stack;
}

// *=========================================
// ** Content container and block **
// *=========================================

//********** Headings**********
h2 {
  font-size: $h2-size;
  font-weight: 700;
}

//********** Containers **********

//********** Paragraphs **********

// *=========================================
// ** Inline **
// *=========================================

//********** Images **********

//* Make images easier to work with
img {
  max-width: 100%;
  display: block;
}

//********** Links **********

// *=========================================
// ** Header  **
// *=========================================
.main-header {
  background-color: $background-colour-main;
  position: relative;
  font-size: $font-size-main;
  overflow: hidden;
  z-index: 3;
}

.main-logo-wrapper {
  @include flex(row);
  justify-content: center;
}

.main-logo {
  width: 300px;
  height: auto;
  margin: 0;
}

// *=========================================
// ** Main Nav  **
// *=========================================

.main-nav {
  @include flex(row);
  justify-content: flex-end;
  min-height: 700px;
  writing-mode: vertical-rl;
  text-orientation: sideways;
  transform: rotate(-180deg);
  top: 0;
  left: $paragraph-spacing-medium;
  position: absolute;
  z-index: 2;

  @include breakpoint(2000) {
    position: fixed;
  }

  @include breakpoint(1300) {
    left: $paragraph-spacing-small;
  }
  @include breakpoint(800) {
    display: none;
  }
}

.main-nav-link {
  text-decoration: none;
  font-size: $font-size-main;
  text-transform: lowercase;
  color: $font-colour-two;
  margin: 0 0 $paragraph-spacing-medium;
}

.main-nav-trigger-wrapper {
  position: fixed;
  display: none;
  z-index: 1;

  @include breakpoint(800) {
    display: block;
    bottom: 0;
    width: 100%;
    text-align: center;
    background-color: $background-colour-two;
    font-size: $font-size-small;
  }
}

.main-nav-trigger {
  display: block;
  color: $font-colour-light;
  text-decoration: none;
  padding: $paragraph-spacing-smaller;
  width: fit-content;
  margin: 0 auto;
}

// *=========================================
// ** Main **
// *=========================================

main {
  overflow: hidden;
  position: relative;
  z-index: 2;
}

.main-content {
  font-size: $font-size-main;
  margin: 0;
}

// *=========================================
// ** Forms  **
// *=========================================

//* Inherit fonts for inputs and buttons

.general-contact-form-section {
  @include flex(column);
  align-items: center;
  padding: $section-spacing-small $section-spacing-medium;
  position: relative;
  background-color: $background-colour-main;
  color: $font-colour-main;

  @include breakpoint(1600) {
    padding: $section-spacing-small;
  }

  @include breakpoint(1400) {
    padding: $section-spacing-small $section-spacing-smaller;
  }

  @include breakpoint(1100) {
    padding: $section-spacing-smaller;
  }

  @include breakpoint(700) {
    padding: $section-spacing-extra-small $paragraph-spacing-small;
  }
}

.general-contact-form {
  @include flex(column);
  align-items: center;
  width: 100%;
  overflow: hidden;
}
.general-contact-form-input-wrapper {
  @include flex(row);
  width: 100%;
  align-items: flex-end;
  margin-bottom: $section-spacing-small;
}

.contact-form-title {
  margin: 0 0 $h2-spacing;
  text-align: center;

  @include breakpoint(1100) {
    margin-bottom: $section-spacing-smaller;
  }

  @include breakpoint(700) {
    margin-bottom: $section-spacing-extra-small;
  }
}

.general-contact-form-label {
  width: $section-spacing-small;
  flex: 0 1 auto;
  font-weight: 700;
  vertical-align: bottom;
  line-height: 0.7;
}

.general-contact-form-input {
  flex: 1 1 auto;
  background-color: $background-colour-main;
  border: 0;
  border-bottom: 4px solid $font-colour-main;
}

.text-area-input-wrapper {
  align-items: flex-start;
}

.text-area-label {
  position: absolute;
  transition: $transition-one;
}

//* Text area with underlines
.text-area-input {
  // Custom Scrollbar
  @include styled-scrollbar(
    1rem,
    $background-colour-three,
    $background-colour-main,
    $background-colour-main
  );
  text-indent: $section-spacing-small;
  border: 0;
  line-height: 1;
  resize: none;
  line-height: 4.2rem;
  background-attachment: local;
  //TODO: Improve text spacing in text area
  // Text area underlining
  background-image: linear-gradient(
      to right,
      $background-colour-main 0,
      transparent 0
    ),
    linear-gradient(to left, $background-colour-main 0, transparent 0),
    repeating-linear-gradient(
      $background-colour-main,
      // Leave
      $background-colour-main 4rem,
      $font-colour-main 1.8rem,
      // Seems to control line thickness
      $font-colour-main 4.3rem,
      $background-colour-main 1.85rem
    );
}
/* ... */

